# GeocodingDemo

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  data_node_main.cpp  docker-compose.yml  gateway_main.cpp  test_grpc_client.cpp  vcpkg.json
apps/data_node/: main.cpp
apps/gateway/: main.cpp
apps/tools/: search_tool.cpp
data/: shard_0_data_demo.csv  shard_1_data_demo.csv
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: QUICK_STYLE_REFERENCE.md  README.md  STYLE_GUIDE.md  STYLE_SETUP_SUMMARY.md
docs/api/: REST_API.md
docs/architecture/: OVERVIEW.md
docs/deployment/: DOCKER_BUILD_GUIDE.md  DOCKER_MIGRATION_COMPLETE.md  DOCKER_TEST_GUIDE.md
docs/development/: QUICK_STYLE_REFERENCE.md  STYLE_SETUP_SUMMARY.md  TESTING_GUIDE.md  TOOLING_CONFIG.md
docs/migrations/: FRONTEND_TO_WEB_RENAME.md  MIGRATION_COMPLETE.md  RESTRUCTURING_PLAN.md
frontend/: README.md  index.html
include/data_node/: address_normalizer.h  address_record.h  csv_parser.h  data_node.h  forward_index.h  radix_tree_index.h
include/gateway/: gateway_server.h
proto/: data_node.proto
scripts/: README.md  check_style.sh  format_code.sh  offline_data_processor.py
src/data_node/: address_normalizer.cpp  csv_parser.cpp  data_node.cpp  forward_index.cpp  radix_tree_index.cpp
src/gateway/: gateway_server.cpp
test/data_node/: address_normalizer_test.cpp  address_record_test.cpp  csv_parser_test.cpp  data_node_test.cpp  forward_index_test.cpp  property_tests.cpp  radix_tree_index_test.cpp
test/fixtures/: malformed_addresses.csv  valid_addresses.csv
test/gateway/: gateway_integration_test.cpp  gateway_server_test.cpp
test/test_data/: empty_optional_fields.csv
web/: README.md  index.html
